@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.929 2008-08-23 20:05:54 castaglia Exp $
+$Id: NEWS,v 1.930 2008-08-24 00:23:06 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -44,6 +44,9 @@ CVS
 - Bug 2537 - mod_sql does not support %{...}t variable.  SQLNamedQuery
   statements can now use "%{time:...}" variables for formatting time strings
   using strftime(3).
+- Bug 2564 - Improper logging of "max connections per host".  The issue was
+  one of the timing of the logging of the "Login successful" message.  Now
+  it happens as part of a LOG_CMD handler for the PASS command.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
